--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.21.0",
     "mongodb": "^2.2.33",
     "mongoose": "^5.0.10"
   }
